# another-engine

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: CMakeLists.txt  application.cpp  application.h  file_system.cpp  file_system.h  game_logic.cpp  game_logic.h  input.cpp  input.h  integer.hpp  log.cpp  log.h  resource_manager.cpp  resource_manager.h  sdl.hpp  termcolor.hpp  util.hpp  vec_math.hpp
src/rendering/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
